tests/success/comptime/temporary_constant_expression_lifetime.bz
function test()
{
	(consteval {
		for (let _ in 0..10)
		{
			[10: int32]();
		}
	});
}
