tests/error/comptime/invalid_result_value2.bz
consteval s = {
	let buffer: [10: uint8];
	[ __builtin_str_from_ptrs(buffer.begin(), buffer.end()) ]
};
